[package]
name = "kuda-rust"
version = "0.1.0"
authors = ["Abubakar Mohammed <abubakar.mohammed@seampay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
futures = { version = "0.3.5", default-features = false}
http = "0.2.4"
hyper = { version = "0.14.2", default-features = false, features = ["full"] }
hyper-tls = "0.5.0"
serde = "1.0.125" # N.B. we use `serde(other)` which was introduced in `1.0.79`
serde_derive = "1.0.125"
serde_json = "1.0.64"
serde_qs = "0.8.3"
tokio = { version = "1.1.1", features = ["full"] }
base64 = "0.13.0"
libxid = "0.1.5"
rand = "0.8.3"
rust-crypto = "0.2.36"
openssl = "0.10.34"
hmac = "0.11.0"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["full"] }

[lib]
name = "kuda"
